examples/codegen.ar
fn main() {
    const a = 1;    // type variable: t1
    const b = 2;    // type variable: t2
    const i = a + b;    // b.type_variable = a.type_variable;
    take(&a);   // a.type_variable = i8
    takeu(&b);  // error: cannot convert from `i8` to `u8`
}

// proc its_game_time() *void {
//     const i = 1;
//     if i as bool {
//         its_game_time()
//     } else if (i+1) as bool {
//         its_game_time()
//     } else {
//         null
//     }
// }

// extern proc write(buf: *const i8) bool;
fn take(buf: *const i8) {}
fn takeu(buf: *const u8) {}

// proc its_game_time() *void {
//     1;
//     (1+2);
//     add(1, 2);
//     param_deref_test(6756 as *u8);
//     *(75654 as *u8) = 12;
//     return 7873 as *u16;
// }

// proc add(a: usize, b: usize) usize {
//     let i = 1;
//     let p = &i;
//     *(p = 4545 as *u8);
//     a + b
// }

// proc param_deref_test(p: *u8) u8 {
//     const i = {
//         if p as bool {
//             *p
//         } else {
//             *(p + 2)
//         }
//     };
//     i
// }
